add login command
git-svn-id: http://www.madcoder.org/svn/jerukkeprok/trunk@225 0f5c9f49-3e71-46a8-8949-fce9018a0e12